Add research papers for references and start adding background

--- a/technical-report/tech-report.bib
+++ b/technical-report/tech-report.bib
@@ -1,1 +1,81 @@
-@book{russell_norvig_2010, place={Upper Saddle River, NJ}, edition={3rd}, title={Artificial intelligence: a modern approach}, publisher={Prentice Hall}, author={Russell, Stuart J. and Norvig, Peter}, year={2010}}
+@book{russell_norvig_2010,
+  place={Upper Saddle River, NJ},
+  edition={3rd},
+  title={Artificial intelligence: a modern approach},
+  publisher={Prentice Hall},
+  author={Russell, Stuart J. and Norvig, Peter},
+  year={2010}
+}
+
+@article{Quinlan:1996:LDT:234313.234346,
+  author = {Quinlan, J. R.},
+  title = {Learning Decision Tree Classifiers},
+  journal = {ACM Comput. Surv.},
+  issue_date = {March 1996},
+  volume = {28},
+  number = {1},
+  month = mar,
+  year = {1996},
+  issn = {0360-0300},
+  pages = {71--72},
+  numpages = {2},
+  url = {http://doi.acm.org.proxy.lib.uiowa.edu/10.1145/234313.234346},
+  doi = {10.1145/234313.234346},
+  acmid = {234346},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+}
+
+@inproceedings{Beatrice:2010:CCC:1741906.1742021,
+  author = {Beatrice, S. and Thirumahal, R. and Raja, S. P.},
+  title = {Comparing the Computational Complexity and Accuracy of Classification Algorithms},
+  booktitle = {Proceedings of the International Conference and Workshop on Emerging Trends in Technology},
+  series = {ICWET '10},
+  year = {2010},
+  isbn = {978-1-60558-812-4},
+  location = {Mumbai, Maharashtra, India},
+  pages = {513--514},
+  numpages = {2},
+  url = {http://doi.acm.org.proxy.lib.uiowa.edu/10.1145/1741906.1742021},
+  doi = {10.1145/1741906.1742021},
+  acmid = {1742021},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {classification, decision trees},
+}
+
+@inproceedings{Garofalakis:2000:EAC:347090.347163,
+  author = {Garofalakis, Minos and Hyun, Dongjoon and Rastogi, Rajeev and Shim, Kyuseok},
+  title = {Efficient Algorithms for Constructing Decision Trees with Constraints},
+  booktitle = {Proceedings of the Sixth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  series = {KDD '00},
+  year = {2000},
+  isbn = {1-58113-233-6},
+  location = {Boston, Massachusetts, USA},
+  pages = {335--339},
+  numpages = {5},
+  url = {http://doi.acm.org.proxy.lib.uiowa.edu/10.1145/347090.347163},
+  doi = {10.1145/347090.347163},
+  acmid = {347163},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {classification, decision tree},
+}
+
+@inproceedings{Huang:2009:GCB:1655925.1656042,
+  author = {Huang, Yo-Ping and Hoa, Vu Thi Thanh},
+  title = {General Criteria on Building Decision Trees for Data Classification},
+  booktitle = {Proceedings of the 2Nd International Conference on Interaction Sciences: Information Technology, Culture and Human},
+  series = {ICIS '09},
+  year = {2009},
+  isbn = {978-1-60558-710-3},
+  location = {Seoul, Korea},
+  pages = {649--654},
+  numpages = {6},
+  url = {http://doi.acm.org.proxy.lib.uiowa.edu/10.1145/1655925.1656042},
+  doi = {10.1145/1655925.1656042},
+  acmid = {1656042},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {ID3 algorithm, classification, decision tree, information gain},
+}
