Add reference to ID3

--- a/technical-report/tech-report.bib
+++ b/technical-report/tech-report.bib
@@ -19,7 +19,7 @@
   issn = {0360-0300},
   pages = {71--72},
   numpages = {2},
-  url = {http://doi.acm.org.proxy.lib.uiowa.edu/10.1145/234313.234346},
+  url = {http://doi.acm.org//10.1145/234313.234346},
   doi = {10.1145/234313.234346},
   acmid = {234346},
   publisher = {ACM},
@@ -36,7 +36,7 @@
   location = {Mumbai, Maharashtra, India},
   pages = {513--514},
   numpages = {2},
-  url = {http://doi.acm.org.proxy.lib.uiowa.edu/10.1145/1741906.1742021},
+  url = {http://doi.acm.org/10.1145/1741906.1742021},
   doi = {10.1145/1741906.1742021},
   acmid = {1742021},
   publisher = {ACM},
@@ -54,7 +54,7 @@
   location = {Boston, Massachusetts, USA},
   pages = {335--339},
   numpages = {5},
-  url = {http://doi.acm.org.proxy.lib.uiowa.edu/10.1145/347090.347163},
+  url = {http://doi.acm.org/10.1145/347090.347163},
   doi = {10.1145/347090.347163},
   acmid = {347163},
   publisher = {ACM},
@@ -72,10 +72,27 @@
   location = {Seoul, Korea},
   pages = {649--654},
   numpages = {6},
-  url = {http://doi.acm.org.proxy.lib.uiowa.edu/10.1145/1655925.1656042},
+  url = {http://doi.acm.org/10.1145/1655925.1656042},
   doi = {10.1145/1655925.1656042},
   acmid = {1656042},
   publisher = {ACM},
   address = {New York, NY, USA},
   keywords = {ID3 algorithm, classification, decision tree, information gain},
 }
+
+@Article{Quinlan1986,
+  author="Quinlan, J. R.",
+  title="Induction of decision trees",
+  journal="Machine Learning",
+  year="1986",
+  month="Mar",
+  day="01",
+  volume="1",
+  number="1",
+  pages="81--106",
+  abstract="The technology for building knowledge-based systems by inductive inference from examples has been demonstrated successfully in several practical applications. This paper summarizes an approach to synthesizing decision trees that has been used in a variety of systems, and it describes one such system, ID3, in detail. Results from recent studies show ways in which the methodology can be modified to deal with information that is noisy and/or incomplete. A reported shortcoming of the basic algorithm is discussed and two means of overcoming it are compared. The paper concludes with illustrations of current research directions.",
+  issn="1573-0565",
+  doi="10.1007/BF00116251",
+  url="https://doi.org/10.1007/BF00116251"
+}
+
