--- a/technical-report/tech-report.bib
+++ b/technical-report/tech-report.bib
@@ -96,3 +96,35 @@
   url="https://doi.org/10.1007/BF00116251"
 }
 
+@misc{Dua:2019 ,
+author = "Dua, Dheeru and Graff, Casey",
+year = "2017",
+title = "{UCI} Machine Learning Repository",
+url = "http://archive.ics.uci.edu/ml",
+institution = "University of California, Irvine, School of Information and Computer Sciences" }
+
+@article{scikit-learn,
+ title={Scikit-learn: Machine Learning in {P}ython},
+ author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+         and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+         and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+         Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+ journal={Journal of Machine Learning Research},
+ volume={12},
+ pages={2825--2830},
+ year={2011}
+}
+
+@book{DBLP:books/wa/BreimanFOS84,
+  author    = {Leo Breiman and
+               J. H. Friedman and
+               R. A. Olshen and
+               C. J. Stone},
+  title     = {Classification and Regression Trees},
+  publisher = {Wadsworth},
+  year      = {1984},
+  isbn      = {0-534-98053-8},
+  timestamp = {Thu, 03 Jan 2002 00:00:00 +0100},
+  biburl    = {https://dblp.org/rec/bib/books/wa/BreimanFOS84},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
