--- a/technical-report/tech-report.tex
+++ b/technical-report/tech-report.tex
@@ -173,6 +173,8 @@ Willem worked primarily on decision tree creation, data file read in, and model 
 
 \subsection{Diego}
 
+Diego's primary focus was on writing and testing the classifier specified in the project spec. In developing the \texttt{classify} binary executable, Diego had to use Ocaml's I/O functionality as well as methods generated from Yojson to read in the decision tree to be used for classification. Additionally he made use of the reader methods developed by Willem in order to get a list of examples to classify. As he developed the classifier he suggested that indexes referring to attributes be added as a field to the decision tree structure as it was necessary for pullling the correct attribute from an example. Diego also wrote tests using Ocaml's testing framework, OUnit. For testing the classifier, he mocked up sample trees and examples for some of the selected datasets plus some made up scenario sets and verified that the classifier was indeed classifying examples correctly. Lastly, as the designated coordinator he setup daily meetings in the engineering building, and checked to make sure everyone knew their tasks and everyone else's.
+
 %% The acknowledgments section is defined using the "acks" environment
 %% (and NOT an unnumbered section). This ensures the proper
 %% identification of the section in the article metadata, and the
